syntax = "proto3";

option go_package = "github.com/beautifultools/gift-chain/grpc/gift";

service GiftChain {
    rpc addGift(Gift) returns (Reply) {}
}

message Gift {
  string nickname = 1;
	string sender_address = 2;
	string content = 3;
	int64 start_time = 4;
	int64 end_time = 5;
}

message Reply {
    bool is_success = 1;
    string status_code = 2;
}