syntax="proto3";

option go_package = "github.com/beautifultools/gift-chain/grpc/neighbor";

service NeighborGreeter {
  rpc getNeighbors(NeighborOptions) returns (Neighbors) {}
}

message NeighborOptions{}

message Neighbors {
  repeated string addresses = 1;
}
